src/style.css
* {
    padding: 0;
    margin: 0;

    width: 1250px;
    height: 700px;
}

.button {
    padding: 10px 20px;
    width: 250px;
    height: 50px;

    background-color: white;
    color: black;

    border: 2px solid black;
    border-radius: 25px;

    font-size: 15px;

    transition: 0.2s;
}
.button:hover {
    background-color: black;
    color: white;

    font-size: 20px;
}

.button-toggled {
    padding: 10px 20px;
    width: 250px;
    height: 50px;

    background-color: gray;
    color: black;

    border: 2px solid black;
    border-radius: 25px;

    font-size: 20px;

    transition: 0.2s;
}

.menu-button {
    width: 250px;
    height: 50px;

    margin: 5px 0px;
}
.menu {
    width: 250px;
    height: auto;
}

.game {
    width: 100%;
    height: 100%;
    position: relative;
}

.game-running {
    display: flex;
}
.game-overlay {
    width: 100%;
    height: 100%;

    position: absolute;
    top: 0;
    left: 0;
    
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: rgba(255, 255, 255, 0.5);
}

.pixi-container {
    width: 1000px;
    height: 700px;
}

.side-menu {
    width: 250px;
    overflow: hidden;

    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    
    border: 1px solid black;
    border-top: none;
}
.stats {
    margin-top: 20px;
    margin-left: 20px;

    width: auto;
    height: auto;

    font-size: 20px;
    font-family: sans-serif;
}

.game-over {
    width: auto;
    height: auto;

    position: absolute;
    
    text-align: center;
}
.game-over span {
    font-size: 30px;
    font-family: sans-serif;
}

.input-field {
    padding: 0px 20px;
    width: 210px;
    height: 50px;

    background-color: white;
    color: black;

    border: 2px solid black;
    border-radius: 25px;

    position: relative;
}
.input-field input[type=text] {
    width: 170px;
    height: 40px;

    display: block;
    box-sizing: border-box;

    background-color: white;
    color: black;

    border: none;
    border-bottom: 1px solid black;

    font-size: 15px;

    outline: none;
}
.input-field input[type=text]:focus {
    border-bottom: 2px solid black;
}
.input-field img {
    position: absolute;
    bottom: 5px;
    right: 15px;

    width: 40px;
    height: 40px;
}

.level-choice {
    width: auto;
    height: 700px;

    display: flex;
    align-items: center;
}
.level-choice-menu {
    width: auto;
    padding: 10px 0px;

    overflow-y: auto;
}

.ui {
    display: flex;
    justify-content: center;
    align-items: center;
}

